# simulating_bird_flock

./: Cargo.toml  README.md
src/: main.rs  main_.rs
